SwiftArena and invoking destroy on objects as arena is destroyed (#67)